# adventofcode2023

./: pyproject.toml
outputs/: solution_day2.txt
src/adventofcode2023/: __init__.py  day1.py  day2.py  day3.py
src/adventofcode2023/utils/: io.py
